<resources>

    <string name="navigate_back">Navigate back</string>
    <string name="top_bar_title">Account</string>
    <string name="category">Category:</string>
    <string name="filter_options">Filter options</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="product_image">Product image</string>
    <string name="go_to_account">Go to account</string>
    <string name="filters">Filters</string>
    <string name="search">Search Product</string>
    <string name="search_product">Search Product</string>

    <string name="formatted_product_price">$%1$s.00</string>

    <string-array name="rangeSliderValues">
        <item>0</item>
        <item>6000</item>
    </string-array>

    <string-array name="productCategoryValues">
        <item>All products</item>
        <item>Hot sales</item>
        <item>Best seller</item>
    </string-array>

</resources>